fix: 在css加载完毕后显示body, 以防止因css和js加载过慢导致错乱的文字显示

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
         <title>Self Study Kit</title>
     </head>
 
-    <body class="mdui-appbar-with-toolbar mdui-theme-accent-orange mdui-theme-layout-auto">
+    <body class="mdui-appbar-with-toolbar mdui-theme-accent-orange mdui-theme-layout-auto" style="display: none">
         <!-- mdui工具栏 -->
         <div class="mdui-appbar mdui-appbar-fixed">
             <div class="mdui-toolbar mdui-color-theme">
