fix: 更改github username

--- a/src/index.tpl.html
+++ b/src/index.tpl.html
@@ -215,21 +215,21 @@
                                 <div class="mdui-typo">
                                     SelfStudyKit v1.0.3<br />
                                     Author:
-                                    <a href="https://github.com/BovineBeta" target="_blank" rel="noopener noreferrer"
+                                    <a href="https://github.com/FBIKdot" target="_blank" rel="noopener noreferrer"
                                         >FBIK.</a
                                     >
                                     (a.k.a. Bovine Beta)<br /><br />
                                     SelfStudy 遵循 GPL-3.0 协议在 Github 开源.<br />
                                     Github Repository:
                                     <a
-                                        href="https://github.com/BovineBeta/SelfStudyKit"
+                                        href="https://github.com/FBIKdot/SelfStudyKit"
                                         target="_blank"
                                         rel="noopener noreferrer"
-                                        >https://github.com/BovineBeta/SelfStudyKit</a
+                                        >https://github.com/FBIKdot/SelfStudyKit</a
                                     ><br />
                                     如果在使用过程中遇到Bug, 欢迎
                                     <a
-                                        href="https://github.com/BovineBeta/SelfStudyKit/issues"
+                                        href="https://github.com/FBIKdot/SelfStudyKit/issues"
                                         target="_blank"
                                         rel="noopener noreferrer"
                                         >Issues</a
