feat: 通过全局变量添加版本号

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="zh">
     <head>
         <meta charset="UTF-8" />
@@ -213,7 +213,7 @@
                             </div>
                             <div class="mdui-panel-item-body">
                                 <div class="mdui-typo">
-                                    SelfStudyKit v1.1.0<br />
+                                    SelfStudyKit <span id="version"></span><br />
                                     Author:
                                     <a href="https://github.com/FBIKdot" target="_blank" rel="noopener noreferrer"
                                         >FBIK.</a
