feat(settings): 版本检查

--- a/index.html
+++ b/index.html
@@ -213,12 +213,21 @@
                             </div>
                             <div class="mdui-panel-item-body">
                                 <div class="mdui-typo">
-                                    SelfStudyKit <span id="version"></span><br />
+                                    SelfStudyKit <span id="version"></span>&nbsp;
+                                    <button
+                                        class="mdui-btn mdui-btn-raised mdui-ripple"
+                                        id="page-settings-versionCheck"
+                                    >
+                                        版本检查
+                                    </button>
+                                    <br />
+                                    <span id="page-settings-versionCheck-message"></span>
+                                    <br /><br />
                                     Author:
                                     <a href="https://github.com/FBIKdot" target="_blank" rel="noopener noreferrer"
                                         >FBIK.</a
                                     >
-                                    (a.k.a. Bovine Beta)<br /><br />
+                                    (a.k.a. Bovine Beta)<br />
                                     SelfStudy 遵循 GPL-3.0 协议在 Github 开源.<br />
                                     Github Repository:
                                     <a
