fix: 错吧分钟写成秒

--- a/index.html
+++ b/index.html
@@ -106,20 +106,20 @@
                 <div class="mdui-col-xs-6" style="transform: translateX(45%)">
                     <div class="mdui-textfield mdui-textfield-floating-label">
                         <i class="mdui-icon material-icons">textsms</i>
-                        <label class="mdui-textfield-label">专注时间 (秒)</label>
+                        <label class="mdui-textfield-label">专注时间 (分钟)</label>
                         <input class="mdui-textfield-input" type="number" value="25" />
                         <div class="mdui-textfield-error"></div>
                     </div>
                     <div class="mdui-textfield mdui-textfield-floating-label">
                         <i class="mdui-icon material-icons">textsms</i>
-                        <label class="mdui-textfield-label">休息时间 (秒)</label>
+                        <label class="mdui-textfield-label">休息时间 (分钟)</label>
                         <input class="mdui-textfield-input" type="number" value="5" />
                         <div class="mdui-textfield-error"></div>
                     </div>
                     <div class="mdui-row">
                         <div class="mdui-col-xs-10 mdui-textfield mdui-textfield-floating-label">
                             <i class="mdui-icon material-icons">textsms</i>
-                            <label class="mdui-textfield-label">长休息时间 (秒)</label>
+                            <label class="mdui-textfield-label">长休息时间 (分钟)</label>
                             <input class="mdui-textfield-input" type="number" value="30" />
                             <div class="mdui-textfield-error"></div>
                         </div>
@@ -252,3 +252,4 @@
         </div>
     </body>
 </html>
+
